--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: #686868;
-  background-image: url("data:image/svg+xml,%3Csvg width='32' height='64' viewBox='0 0 32 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 28h20V16h-4v8H4V4h28v28h-4V8H8v12h4v-8h12v20H0v-4zm12 8h20v4H16v24H0v-4h12V36zm16 12h-4v12h8v4H20V44h12v12h-4v-8zM0 36h8v20H0v-4h4V40H0v-4z' fill='%235d5d5d' fill-opacity='0.44' fill-rule='evenodd'/%3E%3C/svg%3E");
+  background-color: #3f3f46;
   font-family: "Roboto", "Montserrat", sans-serif;
   font-weight: 700;
   text-align: center;
@@ -30,10 +29,11 @@ body {
   display: flex;
   padding: 10px 20px;
   position: relative;
+  background-color: #666666;
 }
 
-.unit-btns {
-  /* background-color: #666666; */
+.btn-container {
+  /* background-color: ; */
   display: block;
   justify-content: space-between;
   padding: 5px;
